# UnealWwiseAssetTool

./: README.md  config.json  config.py  main.py  pyproject.toml
unreal_console/: __init__.py
wwise_console/: __init__.py
